# git-branch-manager

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  logging.rs  mise.toml  skills-lock.json
.cargo/: config.toml
docs/: CHANGELOG.md  TASKS.md  backlog.md  demo-setup.sh  dryness-review.md  performance-diagnostics-loop.md  pre-rewrite-symbols.md  review.md  rewrite-requirements.md  screenshots.tape
docs/architecture/: README.md  architecture.dot  modules.dot
docs/plans/: 2026-03-03-git-bm-design.md  2026-03-04-phase2-full-design.md  2026-03-04-phase2-implementation.md  2026-03-05-filter-system-design.md  2026-03-20-worktrees-view-design.md  2026-03-20-worktrees-view-implementation.md  2026-03-31-progressive-enrichment-design.md  2026-03-31-progressive-enrichment-implementation.md  2026-06-07-view-dump-flags-design.md  2026-06-07-view-dump-flags-implementation.md
scripts/: gen-arch-diagram.sh  layer_dot.py
src/: app.rs  cli.rs  config.rs  dump.rs  lib.rs  main.rs  symbols.rs  theme.rs  types.rs
src/git/: branch.rs  cache.rs  diagnostics.rs  github.rs  merge_detection.rs  mod.rs  operations.rs  pr_loader.rs  squash_loader.rs  status.rs  tags.rs  worktree.rs
src/ui/: branch_list.rs  cells.rs  confirm.rs  diagnostics.rs  dump_render.rs  executing.rs  filter.rs  filter_ui.rs  help.rs  info_modal.rs  list_render.rs  menu.rs  mod.rs  remote_branch_list.rs  render.rs  results.rs  settings.rs  shared.rs  status_bar.rs  symbols.rs  tab_bar.rs  tag_list.rs  theme.rs  toast.rs  worktree_list.rs
src/view/: branches.rs  column.rs  (+7 more)
tests/: integration.rs
verify/: results.txt  verify_features.py
(+7 files in other folders)
