[package]
name = "git-branch-manager"
version = "0.1.0"
edition = "2024"
description = "A TUI tool for managing git branches with squash-merge detection"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
git2 = "0.20"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"

[dev-dependencies]
tempfile = "3"
