[package]
name = "git-branch-manager"
version = "0.2.1-dev1"
edition = "2021"
description = "A TUI tool for managing git branches with squash-merge detection"

[profile.release]
opt-level = 3        # default for release; max optimization
lto = true           # link-time optimization (biggest win)
codegen-units = 1    # slower compile, better optimization
strip = true         # strip symbols from binary (smaller binary)

[profile.dev]
opt-level = 1        # faster than 0, still quick to compile

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
git2 = "0.20"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.0"
dirs = "6"
rusqlite = { version = "0.32", features = ["bundled"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
arboard = { version = "3", default-features = false }

[dev-dependencies]
tempfile = "3"
